force-app/main/default/objects/dsfs__Recipient__c/dsfs__Recipient__c.object-meta.xml
<CustomObject>
    <label>Recipient</label>
    <nameField>
        <displayFormat>CBR-{000000}</displayFormat>
        <label>Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>