force-app/main/default/objects/dsfs__Recipient__c/fields/dsfs__Authentication__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Authentication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authentication</label>
    <type>Checkbox</type>
</CustomField>