force-app/main/default/objects/dsfs__Recipient__c/fields/dsfs__EnvelopeConfiguration__c.field-meta.xml
<CustomField>
    <fullName>dsfs__EnvelopeConfiguration__c</fullName>
    <label>DocuSign Envelope Configuration</label>
    <referenceTo>dsfs__EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>