force-app/main/default/objects/dsfs__Recipient__c/fields/dsfs__Message__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Message__c</fullName>
    <label>Private Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>