force-app/main/default/objects/dsfs__Recipient__c/fields/dsfs__Phone__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Phone__c</fullName>
    <label>SMS Phone Number</label>
    <type>Phone</type>
</CustomField>