force-app/main/default/objects/dsfs__Recipient__c/fields/dsfs__Type__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRL</fullName>
            </value>
            <value>
                <fullName>CRCL</fullName>
            </value>
            <value>
                <fullName>CRL Signing Group</fullName>
            </value>
            <value>
                <fullName>CRCL Signing Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>